Deafult to alpha on CI tag builds

--- a/build.gradle
+++ b/build.gradle
@@ -33,12 +33,12 @@ if (ext.tag) {
         project {
             id = "261603"
             changelog = System.getenv("TRAVIS_COMMIT_MESSAGE") ?: ""
-            if (ext.tag.contains("alpha"))
-                releaseType = "alpha"
+            if (ext.tag.contains("release"))
+                releaseType = "release"
             else if (ext.tag.contains("beta"))
                 releaseType = "beta"
             else
-                releaseType = "release"
+                releaseType = "alpha"
             mainArtifact jar
             relations {
                 optionalLibrary "baubles"
