Keep gradle cache on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,11 @@ script:
 
 after_success:
 - ./gradlew curseforge
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
